# tonbun

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: main.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bindings/: AniList.ts  Chapter.ts  Direction.ts  Format.ts  Integration.ts  Manga.ts  MangaCard.ts  MangaMeta.ts  OAuth.ts  Prefs.ts  Reader.ts  StartDownloadingPayload.ts  UpdateProgressPayload.ts
src-tauri/crates/discord-rich-presence/: Cargo.toml
src-tauri/crates/discord-rich-presence/src/: discord_ipc.rs  discord_ipc_mutex.rs  ipc_unix.rs  ipc_windows.rs  lib.rs
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  discord.rs  downloader.rs  lib.rs  main.rs  manga.rs  prefs.rs  tauri.rs
src-tauri/src/connectors/: mangadex.rs  mod.rs
src-tauri/src/oauth/: anilist.rs  mod.rs
src/assets/: fonts.scss
src/components/: Language.vue
src/components/Reader/: Chapter.vue  Image.vue  Lightroom.vue  Longstrip.vue  Menu.vue  Reader.vue  SwiperC.vue
src/i18n/: index.ts  messages.ts
src/i18n/languages/: en.ts  index.ts  ru.ts
src/lib/: index.ts  window.ts
src/router/: index.ts
src/stores/: editModal.ts  libraryCards.ts  meta.ts  prefs.ts  reader.ts  reader.ts.old  readerSettings.ts  settingsModal.ts
src/types/: mangaDex.ts
src/views/: Library.vue  Reader.vue
