[package]
name = "app"
version = "0.1.0"
description = "A Manga reader app made with Tauri"
authors = ["KPidS"]
license = "GPL-3.0"
repository = "https://github.com/KPidS/tonbun"
default-run = "app"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
downloader = "0.2.6"
tokio = { version = "1", features = ["full"] }
toml = "0.5.9"
scraper = "0.13.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
directories = "4.0.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
queryst = "2.1.0"
image = "0.24.3"
alphanumeric-sort = "1.4.4"
ts-rs = { version = "6.1", features = ["uuid-impl"] }
declarative-discord-rich-presence = { git = "https://github.com/KPidS/declarative-discord-rich-presence" }

tauri = { version = "^1.0.5", features = ["api-all", "devtools"] }
tauri-plugin-persisted-scope = { version = "0.1", features = ["protocol-asset"] }
tauri-plugin-window-state = { git = "https://github.com/KPidS/tauri-plugin-window-state" }
tauri-plugin-deep-link = { git = "https://github.com/FabianLars/tauri-plugin-deep-link" }

uuid = { version = "1.1.2", features = ["v4", "fast-rng", "serde", "macro-diagnostics"] }

# [patch.crates-io]
# discord-rich-presence = { git = "https://github.com/KPidS/declarative-discord-rich-presenc" }

# [dependencies.tauri-plugin-fs-watch]
# git = "https://github.com/tauri-apps/tauri-plugin-fs-watch"
# tag = "v0.1.0"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
